# FanControl.fan_control_arc

./: FanControl.fan_control_arc.csproj  FanControl.fan_control_arc.sln  Lib.cs  Main.cs  README.md
Properties/: AssemblyInfo.cs
fan_control_arc_lib/: Cargo.toml
fan_control_arc_lib/lib/: igcl_api.h
fan_control_arc_lib/src/: bindings.rs  lib.rs
